# hexlet_django_blog

./: manage.py  pyproject.toml
hexlet_django_blg/: asgi.py  settings.py  urls.py  wsgi.py
hexlet_django_blg/templates/: about.html
